// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepCommands /> tests able to switch tab 1`] = `
<div>
  <div
    class="stepCommand"
  >
    <div
      class="stepTabs"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_step-commands_StepConfiguration"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="StepConfiguration"
            id="bp3-tab-title_step-commands_StepConfiguration"
            role="tab"
            tabindex="0"
          >
            stepConfiguration
          </div>
          <div
            aria-controls="bp3-tab-panel_step-commands_Advanced"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="Advanced"
            id="bp3-tab-title_step-commands_Advanced"
            role="tab"
            tabindex="0"
          >
            advancedTitle
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_step-commands_StepConfiguration"
          class="bp3-tab-panel"
          id="bp3-tab-panel_step-commands_StepConfiguration"
          role="tabpanel"
        >
          <div>
            {"a":"a","identifier":"testStep","name":"testStep","type":"Run","spec":{"connectorRef":"account.dockerdev","image":"maven:3-openjdk-8","command":"mvn clean compile war:war"}}
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="bp3-tab-title_step-commands_Advanced"
          class="bp3-tab-panel"
          id="bp3-tab-panel_step-commands_Advanced"
          role="tabpanel"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main form"
            >
              <div>
                <div>
                  <div
                    class="Accordion--accordion"
                  >
                    <div
                      class="Accordion--panel"
                      data-open="true"
                      data-testid="conditionalExecution-panel"
                    >
                      <div
                        class="Accordion--summary"
                        data-testid="conditionalExecution-summary"
                      >
                        <div
                          class="Accordion--chevron"
                        />
                        <div
                          class="Accordion--label"
                        >
                          pipeline.conditionalExecution.title
                        </div>
                      </div>
                      <div
                        class="bp3-collapse Accordion--collapse"
                        style="height: auto; overflow-y: visible; transition: none;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0); transition: none;"
                        >
                          <div
                            class="Accordion--details"
                            data-testid="conditionalExecution-details"
                          >
                            <div
                              class="OverlaySpinner--overlaySpinner"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700"
                                style="font-size: 12px;"
                              >
                                pipeline.conditionalExecution.subTitle
                                 
                                <a
                                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue400 Button--with-current-color Button--link"
                                  href="https://ngdocs.harness.io/"
                                  rel="noreferrer noopener"
                                  role="button"
                                  style="font-size: 12px;"
                                  tabindex="0"
                                  target="_blank"
                                >
                                  <span
                                    class="bp3-button-text"
                                  >
                                    pipeline.createPipeline.learnMore
                                  </span>
                                </a>
                              </p>
                              <div
                                class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-top StyledProps--border-bottom StyledProps--border-color-grey300 StyledProps--padding-bottom-small StyledProps--padding-top-medium StyledProps--margin-top-medium"
                              >
                                <div>
                                  <label
                                    class="bp3-control bp3-radio blackText active"
                                  >
                                    <input
                                      checked=""
                                      name="Blueprint3.RadioGroup-1"
                                      type="radio"
                                      value="Success"
                                    />
                                    <span
                                      class="bp3-control-indicator"
                                    />
                                    pipeline.conditionalExecution.statusOption.success
                                  </label>
                                  <label
                                    class="bp3-control bp3-radio blackText"
                                  >
                                    <input
                                      name="Blueprint3.RadioGroup-1"
                                      type="radio"
                                      value="All"
                                    />
                                    <span
                                      class="bp3-control-indicator"
                                    />
                                    pipeline.conditionalExecution.statusOption.all
                                  </label>
                                  <label
                                    class="bp3-control bp3-radio blackText"
                                  >
                                    <input
                                      name="Blueprint3.RadioGroup-1"
                                      type="radio"
                                      value="Failure"
                                    />
                                    <span
                                      class="bp3-control-indicator"
                                    />
                                    pipeline.conditionalExecution.statusOption.failure
                                  </label>
                                </div>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-xxlarge StyledProps--padding-right-medium"
                              >
                                <div
                                  class="bp3-form-group"
                                  data-id="enableJEXL-0"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <label
                                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--color StyledProps--color-grey900 StyledProps--inline"
                                    >
                                      <input
                                        name="enableJEXL"
                                        type="checkbox"
                                      />
                                      <span
                                        class="bp3-control-indicator"
                                      />
                                       pipeline.conditionalExecution.condition
                                    </label>
                                  </div>
                                </div>
                                <div
                                  class="bp3-form-group expressionInput"
                                  data-id="condition-1"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <div
                                      class="bp3-popover-wrapper"
                                    >
                                      <div
                                        class="bp3-popover-target"
                                      >
                                        <div
                                          class="bp3-input-group bp3-disabled"
                                        >
                                          <input
                                            autocomplete="off"
                                            class="bp3-input"
                                            disabled=""
                                            name="condition"
                                            type="text"
                                            value=""
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Accordion--panel"
                      data-open="false"
                      data-testid="failureStrategy-panel"
                    >
                      <div
                        class="Accordion--summary"
                        data-testid="failureStrategy-summary"
                      >
                        <div
                          class="Accordion--chevron"
                        />
                        <div
                          class="Accordion--label"
                        >
                          pipeline.failureStrategies.title
                        </div>
                      </div>
                      <div
                        class="bp3-collapse Accordion--collapse"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(-undefinedpx);"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepCommands /> tests renders ok 1`] = `
<div>
  <div
    class="stepCommand"
  >
    <div
      class="stepTabs"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_step-commands_StepConfiguration"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="StepConfiguration"
            id="bp3-tab-title_step-commands_StepConfiguration"
            role="tab"
            tabindex="0"
          >
            stepConfiguration
          </div>
          <div
            aria-controls="bp3-tab-panel_step-commands_Advanced"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="Advanced"
            id="bp3-tab-title_step-commands_Advanced"
            role="tab"
            tabindex="0"
          >
            advancedTitle
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_step-commands_StepConfiguration"
          class="bp3-tab-panel"
          id="bp3-tab-panel_step-commands_StepConfiguration"
          role="tabpanel"
        >
          <div>
            {"a":"a","identifier":"testStep","name":"testStep","type":"Run","spec":{"connectorRef":"account.dockerdev","image":"maven:3-openjdk-8","command":"mvn clean compile war:war"}}
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="bp3-tab-title_step-commands_Advanced"
          class="bp3-tab-panel"
          id="bp3-tab-panel_step-commands_Advanced"
          role="tabpanel"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main form"
            >
              <div>
                <div>
                  <div
                    class="Accordion--accordion"
                  >
                    <div
                      class="Accordion--panel"
                      data-open="true"
                      data-testid="conditionalExecution-panel"
                    >
                      <div
                        class="Accordion--summary"
                        data-testid="conditionalExecution-summary"
                      >
                        <div
                          class="Accordion--chevron"
                        />
                        <div
                          class="Accordion--label"
                        >
                          pipeline.conditionalExecution.title
                        </div>
                      </div>
                      <div
                        class="bp3-collapse Accordion--collapse"
                        style="height: auto; overflow-y: visible; transition: none;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0); transition: none;"
                        >
                          <div
                            class="Accordion--details"
                            data-testid="conditionalExecution-details"
                          >
                            <div
                              class="OverlaySpinner--overlaySpinner"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700"
                                style="font-size: 12px;"
                              >
                                pipeline.conditionalExecution.subTitle
                                 
                                <a
                                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue400 Button--with-current-color Button--link"
                                  href="https://ngdocs.harness.io/"
                                  rel="noreferrer noopener"
                                  role="button"
                                  style="font-size: 12px;"
                                  tabindex="0"
                                  target="_blank"
                                >
                                  <span
                                    class="bp3-button-text"
                                  >
                                    pipeline.createPipeline.learnMore
                                  </span>
                                </a>
                              </p>
                              <div
                                class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-top StyledProps--border-bottom StyledProps--border-color-grey300 StyledProps--padding-bottom-small StyledProps--padding-top-medium StyledProps--margin-top-medium"
                              >
                                <div>
                                  <label
                                    class="bp3-control bp3-radio blackText active"
                                  >
                                    <input
                                      checked=""
                                      name="Blueprint3.RadioGroup-0"
                                      type="radio"
                                      value="Success"
                                    />
                                    <span
                                      class="bp3-control-indicator"
                                    />
                                    pipeline.conditionalExecution.statusOption.success
                                  </label>
                                  <label
                                    class="bp3-control bp3-radio blackText"
                                  >
                                    <input
                                      name="Blueprint3.RadioGroup-0"
                                      type="radio"
                                      value="All"
                                    />
                                    <span
                                      class="bp3-control-indicator"
                                    />
                                    pipeline.conditionalExecution.statusOption.all
                                  </label>
                                  <label
                                    class="bp3-control bp3-radio blackText"
                                  >
                                    <input
                                      name="Blueprint3.RadioGroup-0"
                                      type="radio"
                                      value="Failure"
                                    />
                                    <span
                                      class="bp3-control-indicator"
                                    />
                                    pipeline.conditionalExecution.statusOption.failure
                                  </label>
                                </div>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-xxlarge StyledProps--padding-right-medium"
                              >
                                <div
                                  class="bp3-form-group"
                                  data-id="enableJEXL-0"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <label
                                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--color StyledProps--color-grey900 StyledProps--inline"
                                    >
                                      <input
                                        name="enableJEXL"
                                        type="checkbox"
                                      />
                                      <span
                                        class="bp3-control-indicator"
                                      />
                                       pipeline.conditionalExecution.condition
                                    </label>
                                  </div>
                                </div>
                                <div
                                  class="bp3-form-group expressionInput"
                                  data-id="condition-1"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <div
                                      class="bp3-popover-wrapper"
                                    >
                                      <div
                                        class="bp3-popover-target"
                                      >
                                        <div
                                          class="bp3-input-group bp3-disabled"
                                        >
                                          <input
                                            autocomplete="off"
                                            class="bp3-input"
                                            disabled=""
                                            name="condition"
                                            type="text"
                                            value=""
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Accordion--panel"
                      data-open="false"
                      data-testid="failureStrategy-panel"
                    >
                      <div
                        class="Accordion--summary"
                        data-testid="failureStrategy-summary"
                      >
                        <div
                          class="Accordion--chevron"
                        />
                        <div
                          class="Accordion--label"
                        >
                          pipeline.failureStrategies.title
                        </div>
                      </div>
                      <div
                        class="bp3-collapse Accordion--collapse"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(-undefinedpx);"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepCommands /> tests renders ok without tabs 1`] = `
<div>
  <div
    class="stepCommand withoutTabs"
  >
    <div>
      {"a":"a","identifier":"testStep","name":"testStep","type":"Run","spec":{"connectorRef":"account.dockerdev","image":"maven:3-openjdk-8","command":"mvn clean compile war:war"}}
    </div>
  </div>
</div>
`;
